Adição do bootstrap, adição de informações ao pokemon, ao clicar no pokemon um modal é aberto com todas as informações sobre o pokemon

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -20,6 +20,14 @@ body{
     }
 }
 
-
+/* Important part */
+.modal-dialog{
+    overflow-y: initial !important
+}
+.modal-body{
+    height: 80vh;
+    overflow-y: auto;
+    
+}
 
 
